# LightWave2D

./: .buildinfo  .coveragerc  .gitignore  .readthedocs.yml  AGENTS.md  CMakeLists.txt  MANIFEST.in  README.md  README.rst  code.html  data.json  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  setup.cfg  sg_execution_times.html  theory.html  version_switcher.json
.github/workflows/: deploy_documentation.yml  deploy_wheel.yml  deploy_workflow.yml
LightWave2D/: __init__.py  _version.py  components.py  detector.py  directories.py  experiment.py  grid.py  helper.py  physics.py  pml.py  propagation.py  source.py  units.py  utils.py
LightWave2D/binary/: __init__.py
LightWave2D/components/: __init__.py  base_class.py  basic.py  complex.py  scatterers.py
LightWave2D/cpp/: config.cpp  fdtd_simulation.cpp  field_set.cpp  mesh_set.cpp  source.cpp
LightWave2D/cpp/config/: CMakeLists.txt  config.h  interface.cpp
LightWave2D/cpp/field_set/: CMakeLists.txt  field_set.cpp  field_set.h  interface.cpp
LightWave2D/cpp/mesh_set/: CMakeLists.txt  interface.cpp  mesh_set.cpp  mesh_set.h
LightWave2D/cpp/simulator/: CMakeLists.txt  interface.cpp  simulator.cpp  simulator.h
LightWave2D/cpp/source/: CMakeLists.txt  interface.cpp  source.cpp  source.h
_downloads/1e65de4c405e50e3c28d0571ba5f916d/: experiment_0.py
_downloads/27d744446730ea471fed76dadea542ab/: plot_resonator.ipynb
_downloads/342c45373f5d44f6ccc12186d6e40ef5/: plot_resonator.py
_downloads/4195c39273ca6ccc7a2ebaf0bb6792ff/: experiment_0.ipynb
_downloads/4eaec0aaac9201b47106404482852f9f/: plot_square_scatterer.py
_downloads/734d4e545c9434a7240aa31c70491814/: plot_waveguide.ipynb
_downloads/821c54508e3dea078d86686d5e42283f/: plot_lense.ipynb
_downloads/83964d479b7e90030bf9158401004018/: plot_spherical_scatterer.ipynb
_downloads/92d46679af7dac37fb52cedfd7b76cb0/: plot_ellipse_scatterer.py
_downloads/94a7ad990f76929082d993c434db9c91/: plot_spherical_scatterer_impulsion.ipynb
_downloads/98a3a459bb0d04bf06c7c4faec2335fb/: plot_spherical_scatterer.py
_downloads/a00fed6a2888b1e99c36ab6940c58b9a/: plot_ellipse_scatterer.ipynb
_downloads/b3592c96a55c7875abd486ed1d46a863/: plot_lense.py
_downloads/df2bc2e5deebdc6bc51fee8c35d446b6/: plot_square_scatterer.ipynb
_downloads/e84bffa0c31b14e4c41e9be380e7d21f/: plot_source_detector.ipynb
_sources/: index.rst.txt  sg_execution_times.rst.txt  theory.rst.txt
_sources/gallery/: experiment_0.rst.txt  index.rst.txt  plot_ellipse_scatterer.rst.txt  plot_lense.rst.txt  plot_resonator.rst.txt  plot_source_detector.rst.txt  plot_spherical_scatterer.rst.txt  plot_square_scatterer.rst.txt  plot_waveguide.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
development/: plot_spherical_scatterer.py
developments/: testings_0.py
docs/examples/: README.rst  experiment_0.py  experiment_1.py  plot_ellipse_scatterer.py  plot_lense.py  plot_resonator.py  plot_source_detector.py  plot_spherical_scatterer.py  plot_spherical_scatterer_impulsion.py  plot_square_scatterer.py  plot_waveguide.py
docs/examples/detector/: README.rst  source_detector.py
docs/examples/extra/: README.rst  lense.py  waveguide.py
docs/examples/scattering/: README.rst  ellipse.py  spherical.py  spherical_impulsion.py  square.py
docs/latest/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/latest/.doctrees/: code.doctree  environment.pickle  index.doctree  references.doctree  sg_execution_times.doctree  theory.doctree
docs/latest/_modules/: index.html
docs/latest/gallery/: index.html
docs/source/: code.rst  conf.py  sg_execution_times.rst  theory.rst
docs/v0.3.0/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.3.1/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.3.4/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.4.0/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.4.1/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.5.0/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.5.1/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.6.0/: .buildinfo  code.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
gallery/: experiment_0.html  index.html  plot_ellipse_scatterer.html  plot_lense.html  plot_resonator.html  plot_source_detector.html  plot_spherical_scatterer.html  plot_square_scatterer.html  plot_waveguide.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9f133f9a467ce476_components_py.html  z_9f133f9a467ce476_detector_py.html  z_9f133f9a467ce476_experiment_py.html  z_9f133f9a467ce476_grid_py.html  z_9f133f9a467ce476_helper_py.html  z_9f133f9a467ce476_physics_py.html  z_9f133f9a467ce476_pml_py.html  z_9f133f9a467ce476_source_py.html  z_9f133f9a467ce476_units_py.html  z_9f133f9a467ce476_utils_py.html
tests/: conftest.py  test.py  test_1.py  test_experiment.py  test_fdtd_cpp.py  test_grid.py  test_pml.py  test_source.py  test_utils.py
tests/api/: test_grid.py  test_source.py
(+457 files in other folders)
