[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools>=64", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.verbose = true
editable.verbose = true
logging.level = "INFO"
wheel.exclude = ["LightWave2D/cpp"]
install.strip = false
sdist.include = ["LightWave2D/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[project]
name = "LightWave2D"
dynamic = ["version"]
description="A package for finite-difference time domain computation for light propagation"
keywords = ["FDTD", "Light", "propagation", "physics"]
documentation = 'https://lightwave2d.readthedocs.io/'
url = 'https://github.com/MartinPdeS/LightWave2D'
platforms = ['unix', 'linux', 'osx']
readme = "README.rst"
requires-python = ">=3.10"
authors = [{ name = "Martin Poinsinet de Sivry-Houle", email = "martin.poinsinet.de.sivry@gmail.com" }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Jupyter',
    'Framework :: Sphinx'
]

dependencies = [
    "setuptools_scm[toml] ~=8.0",
    "MPSPlots",
    'PyOptik',
    'shapely ~=2.0',
    'numpy >=1.26,<3.0',
    'opencv-python ~=4.10',
    "pydantic >=2.9.2,<2.11.0",
    'ffmpeg ~= 1.4'
]

[tool.setuptools_scm]
write_to = "LightWave2D/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["LightWave2D"]

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "coverage==7.6.9"
]

documentation = [
    "numpydoc==1.8.0",
    "sphinx>=5.1.1",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-gallery==0.18.0",
    "pydata-sphinx-theme==0.15.4",
]

dev = [
    "flake8 ==7.1.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
testpaths = [
    "tests/*",
]
addopts = [
    '-v',
    '-rA',
    '-rw',
    '--cov=LightWave2D',
    '--cov-report=html',
    "--cov-report=term"
]

[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1
before-test = ""
test-command = "python -m pytest -rA {project}/tests --ignore={project}/tests/gui"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp310-manylinux*", "cp311-manylinux*", "cp312-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp310-*", "cp311-*", "cp312-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp310-*", "cp311-*", "cp312-*"]


[tool.coverage.run]
source = ['SuPyMode']
omit = [
    '*\__init__.py',
    '*/_version.py',
    '*/directories.py',
]
branch = true
relative_files = true