[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools>=64", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = ".skbuild/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.verbose = true
editable.verbose = true
logging.level = "INFO"
wheel.exclude = ["LightWave2D/cpp"]
install.strip = false
sdist.include = ["LightWave2D/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[project]
name = "LightWave2D"
dynamic = ["version"]
description="A package for finite-difference time domain computation for light propagation"
keywords = ["FDTD", "Light", "propagation", "physics"]
urls = {"Documentation" = "https://martinpdes.github.io/LightWave2D/", "Repository" = "https://github.com/MartinPdeS/LightWave2D"}
readme = "README.rst"
requires-python = ">=3.10"
authors = [{ name = "Martin Poinsinet de Sivry-Houle", email = "martin.poinsinet.de.sivry@gmail.com" }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Framework :: Jupyter',
    'Framework :: Sphinx'
]

dependencies = [
    "setuptools_scm[toml] >=8,<10",
    "MPSPlots",
    'shapely ~=2.0',
    "numpy ==2.2.6",
    'opencv-python ~=4.10',
    "pydantic >=2.9.2,<2.13.0",
    'ffmpeg ~= 1.4',
    'pint>=0.24',
    "TypedUnit"
]

[tool.setuptools_scm]
write_to = "LightWave2D/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["LightWave2D"]

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "coverage==7.12.0"
]

documentation = [
    "numpydoc==1.10.0",
    "sphinx>=5.1.1",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-gallery==0.19.0",
    "pydata-sphinx-theme==0.16.1",
]

dev = [
    "flake8 ==7.3.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
testpaths = [
    "tests/*",
]
addopts = [
    '-v',
    '-rA',
    '-rw',
    '--cov=LightWave2D',
    '--cov-report=html',
    "--cov-report=term"
]

[tool.cibuildwheel]
build-frontend = "build"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp311-manylinux*", "cp312-manylinux*", "cp313-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-test = ""
test-command = "cd {project}; python -m pytest --config-file=pytest.ini"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"  # --exclude=libomp.dylib
test-command = 'cd {project}; python -m pytest --config-file=pytest.ini'  # DYLD_PRINT_LIBRARIES=NO

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
test-command = 'cd /d {project} && python -m pytest --config-file=pytest.ini'
