[metadata]
name = LightWave2D
description = A package for finite-difference time domain computation for light propagation.
keywords =
    mie
    scattering
    backscatter
    sphere
    cylinder
    nanoparticle
    phase function
    efficiency
    rayleigh
    backscattering

version = file: LightWave2D/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx
url = https://github.com/MartinPdeS/LightWave2D
license = MIT
license_files = LICENSE
readme = README.rst
documentation = https://pymiesim.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
packages = find_namespace:
include_package_data = True
python_requires >= 3.8

install_requires =
    numpy>=1.26.0
    PyOptik==0.7.1

setup_requires =
    setuptools>=69.0.2
    numpy>=1.26.0

[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0

[options.packages.find]
exclude =
    extern
    docs
    tests

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = LightWave2D


[sdist]
formats = zip, gztar